syntax = "proto3";

package gameengine.v1;

option go_package = "gameengine";

service gameengine{
    rpc SetScore (SetScoreRequest) returns (SetScoreResponse);
    rpc GetSize (GetSizeRequest) returns (GetSizeResponse);
}

message SetScoreRequest{
    double score = 1;
}

message SetScoreResponse{
    bool set = 1;
}

message GetSizeRequest{

}

message GetSizeResponse{
    double size = 1;
}